2000-08-02 14:10 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.l
     * Changed USUAL to ANYTYPE

2000-08-02 14:05 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/harbour.slx
     * Changed VARIANT to ANYTYPE as it appear to be the prefered choice.

   * source/compiler/hbpcode.c
     * Changed \[ to [ to correct compiler warnings.
     * Changed Usual. to AnyType.

2000-08-02 15:55 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * config/os2/global.cf
     ! Restored to version 1.2, because 1.3 had no tab
       characters, then reapplied the changes from 1.3
       to the restored 1.2 and committed it as 1.4.

2000-08-02 21:10 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *doc/whatsnew.txt
        * added polish language modules

    *source/compiler/harbour.l
        * fixed support for ANNOUNCE and _PROCREQ_
        * optimized some other rules

2000-08-02 14:45 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * config/c.cf
     ! Restored to version 1.9, because 1.10 has the same
       content, but has bad line endings and an EOF char.

2000-08-02 11:30 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * hb_slex.bc
   * makefile.bc
     + Added: -Phb_comp -C to Flex (macro.l) as per GNU make.
     + Added: -phb_comp to Bison (macro.y) as per GNU make.

     /* We might need same change in other make files (VC etc.) */
     /* BTW, Do we have SimpLex support in those other make files? */

   * source/macro/macro.l
   * source/macro/macro.y
     - Removed: #define yylex hb_complex

   * source/macro/macroslx.c
     - Removed un-needed comment.

   * source/pp/ppcore.c
     ! Fixed unintended side effect of UPPER-CASING #include file names.

2000-08-02 09:40 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * source/macro/macro.l
   * source/macro/macro.y
     + Added: #define yylex hb_complex

   * source/pp/ppcore.c
     + Added check for the file path when checking self reference of #include.